--- a/MyShop/MyShop.WebUI/Views/ProductManager/Edit.cshtml
+++ b/MyShop/MyShop.WebUI/Views/ProductManager/Edit.cshtml
@@ -42,9 +42,9 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.Category, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.Product.Category, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.DropDownListFor(model => model.Product.Category, new SelectList(Model.ProductCategories, "Category", "Category"), new { htmlAttributes = new { @class = "form-control" } })
+            @Html.DropDownListFor(model => model.Product.Category, new SelectList(Model.ProductCategories, "Category", "Category"), new { htmlAttributes = new { @class = "form-control select" } })
         </div>
     </div>
 
