Basket View Model Completed

--- a/MyShop/MyShop.WebUI/Views/Home/Details.cshtml
+++ b/MyShop/MyShop.WebUI/Views/Home/Details.cshtml
@@ -30,7 +30,7 @@
                 </dd>
             </dl>
             <p align="center">
-                <a href="#" class="btn btn-success">Add to Basket</a>
+                <a href="@Url.Action("AddToBasket", "Basket", new { Id = Model.Id })" class="btn btn-success">Add to Basket</a>
             </p>
         </div>
 
