--- a/MyShop/MyShop.WebUI/Views/Home/Index.cshtml
+++ b/MyShop/MyShop.WebUI/Views/Home/Index.cshtml
@@ -36,7 +36,7 @@
                 </div>
 
                 <div class="col-md-12" align="right">
-                    <a href="#" class="btn btn-success btn-sm">Add to Basket</a>
+                    <a href="@Url.Action("AddToBasket", "Basket", new { Id = item.Id })" class="btn btn-success btn-sm">Add to Basket</a>
                 </div>
             </div>
         }
