Had to Rename a Model

--- a/MyShop/MyShop.WebUI/Views/Basket/BasketSummary.cshtml
+++ b/MyShop/MyShop.WebUI/Views/Basket/BasketSummary.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyShop.Core.ViewModels.BasketSummaryViewModem
+﻿@model MyShop.Core.ViewModels.BasketSummaryViewModel
 
 <ul class="nav navbar-nav navbar-right">
     <li><a href="@Url.Action("Index","Basket")">@Model.BasketCount item</a></li>
